--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "geoip-lite": "^1.4.7",
     "mysql2": "^3.2.0",
+    "openai": "^4.0.0",
     "socket.io": "^4.6.1",
     "useragent": "^2.3.0"
   },
